added ocr for venues suggestions
